--- a/package.json
+++ b/package.json
@@ -3,34 +3,24 @@
   "version": "1.0.0",
   "description": "home-print-web",
   "private": true,
-  "egg": {
-    "declarations": true
-  },
   "dependencies": {
+    "nuxt": "^3.7.0",
     "cloudconvert": "^2.3.4",
     "dayjs": "^1.11.9",
-    "egg": "^3",
-    "egg-scripts": "^2",
-    "egg-static": "^2.3.1",
-    "egg-view-nunjucks": "^2.3.0",
     "fs-extra": "^11.1.1",
     "ipp": "^2.0.1",
     "node-json-db": "^2.2.0"
   },
   "devDependencies": {
-    "egg-bin": "^5",
-    "egg-ci": "^2",
-    "egg-mock": "^5",
-    "eslint": "^8",
-    "eslint-config-egg": "^12"
+    "@nuxtjs/tailwindcss": "^6.8.0"
   },
   "engines": {
     "node": ">=16.0.0"
   },
   "scripts": {
+    "build": "nuxt build",
+    "dev": "nuxt dev",
     "start": "egg-scripts start --title=egg-server-home-print-web",
-    "stop": "egg-scripts stop --title=egg-server-home-print-web",
-    "dev": "egg-bin dev --port 7020",
-    "debug": "egg-bin debug"
+    "stop": "egg-scripts stop --title=egg-server-home-print-web"
   }
 }
