--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "home-print-web",
   "private": true,
   "dependencies": {
-    "nuxt": "^3.7.0",
     "cloudconvert": "^2.3.4",
     "dayjs": "^1.11.9",
+    "formidable": "v3",
     "fs-extra": "^11.1.1",
     "ipp": "^2.0.1",
-    "node-json-db": "^2.2.0"
+    "node-json-db": "^2.2.0",
+    "nuxt": "^3.7.0",
+    "vue-toast-notification": "^3.1.1"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.8.0"
