--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,6 +3,8 @@ services:
   home-print-web:
     image: xbf321/home-print-web
     container_name: home-print-web
-    restart: always
+    restart: unless-stopped
     ports:
       - 7020:7020
+    volumes:
+      - ./home-print-web/.env:/root/app/.env
