add push server

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PRINTER=http://192.168.100.1:631/printers/HP1106
 AUTH_USER_NAME=test
 AUTH_USER_PASSWORD=test
+MESSAGE_PUSHER_SERVER=http://192.168.100.1:7030/push/root
 CLOUDCONVERT_ACCESS_TOKEN=token
